--- a/index.html
+++ b/index.html
@@ -39,6 +39,37 @@
         <p>Hello, Sign in</p>
         <h1>Account & Lists <img src="./assets/dropdown_icon.png" width="8px" alt=""></h1>
       </div>
+      <div class="nav-cart">
+        <p>Return</p>
+        <h1>& Orders</h1>
+      </div>
+      <a href="" class="nav-cart">
+        <img src="./assets/cart_icon.png" width="35px" alt="">
+        <h4>Cart</h4>
+      </a>
     </nav>
+    <div class="nav-bottom">
+        <div>
+            <img src="./assets/menu_icon.png" width="25px" alt="">
+            <p>All</p>
+        </div>
+        <p>Today's Deals</p>
+        <p>Customer Service</p>
+        <p>Registry</p>
+        <p>Gift Cards</p>
+        <p>Sell</p>
+    </div>
+    <div class="header-slider">
+        <a href="#" class="control-prev">&#129144</a>
+        <a href="#" class="control-next">&#129146</a>
+        <ul>
+            <img src="./assets//header1.jpg" class="header-img" alt="">
+            <img src="./assets//header2.jpg" class="header-img" alt="">
+            <img src="./assets//header3.jpg" class="header-img" alt="">
+            <img src="./assets//header4.jpg" class="header-img" alt="">
+            <img src="./assets//header5.jpg" class="header-img" alt="">
+            <img src="./assets//header6.jpg" class="header-img" alt="">
+        </ul>
+    </div>
   </body>
 </html>
