added script.js for image scrolling function

--- a/index.html
+++ b/index.html
@@ -71,5 +71,6 @@
             <img src="./assets//header6.jpg" class="header-img" alt="">
         </ul>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
