--- a/index.html
+++ b/index.html
@@ -71,6 +71,67 @@
             <img src="./assets//header6.jpg" class="header-img" alt="">
         </ul>
     </div>
+    <div class="box-row header-box">
+        <div class="box-col">
+            <h3>Free international returns</h3>
+            <img src="./assets/box1-1.jpg" alt="">
+            <a href="/">Shop More</a>
+        </div>
+        <div class="box-col">
+            <h3>Lunar New Year</h3>
+            <img src="./assets/box1-2.jpg" alt="">
+            <a href="/">Shop More</a>
+        </div>
+        <div class="box-col">
+            <h3>Toys Under £25</h3>
+            <img src="./assets/box1-3.jpg" alt="">
+            <a href="/">Shop More</a>
+        </div>
+        <div class="box-col">
+            <h3>Deals in PCs</h3>
+            <img src="./assets/box1-4.jpg" alt="">
+            <a href="/">Shop More</a>
+        </div>
+    </div>
+    <div class="box-row">
+        <div class="box-col">
+            <h3>Personal Care</h3>
+            <img src="./assets/box2-1.jpg" alt="">
+            <a href="/">Shop More</a>
+        </div>
+        <div class="box-col">
+            <h3>Latest Electronics</h3>
+            <img src="./assets/box2-2.jpg" alt="">
+            <a href="/">Shop More</a>
+        </div>
+        <div class="box-col">
+            <h3>Pet Food</h3>
+            <img src="./assets/box2-3.jpg" alt="">
+            <a href="/">Shop More</a>
+        </div>
+        <div class="box-col">
+            <h3>Fashion Items</h3>
+            <img src="./assets/box2-4.jpg" alt="">
+            <a href="/">Shop More</a>
+        </div>
+    </div>
+
+<div class="products-slider">
+    <h2>Best Sellers in Sports & Outdoors</h2>
+    <div class="products">
+        <img src="./assets/product1-1.jpg" alt="">
+        <img src="./assets/product1-1.jpg" alt="">
+        <img src="./assets/product1-1.jpg" alt="">
+        <img src="./assets/product1-1.jpg" alt="">
+        <img src="./assets/product1-1.jpg" alt="">
+        <img src="./assets/product1-1.jpg" alt="">
+        <img src="./assets/product1-1.jpg" alt="">
+        <img src="./assets/product1-1.jpg" alt="">
+        <img src="./assets/product1-1.jpg" alt="">
+        <img src="./assets/product1-1.jpg" alt="">
+    </div>
+</div>
+
     <script src="script.js"></script>
   </body>
 </html>
